--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<title>My CV</title>
 	<link rel="favicon" src="Profile-Photo.png" type="img/png">
 	<!-- <a href="https://icons8.com/icon/80310/bookmark">Bookmark icon by Icons8</a> -->
-	<link rel="stylesheet" type="text/css" href="cv.css">
+	<link rel="stylesheet" type="text/css" href="index.css">
 	<!-- <link rel="stylesheet" type="text/css" href=""> -->
 </head>
 <body>
