--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>My CV</title>
-	<link rel="favicon" src="Profile-Photo.png" type="img/png">
-	<!-- <a href="https://icons8.com/icon/80310/bookmark">Bookmark icon by Icons8</a> -->
+	<link rel="icon" type="img/png" href="https://img.icons8.com/flat_round/64/000000/bookmark-ribbon.png" >
 	<link rel="stylesheet" type="text/css" href="index.css">
-	<!-- <link rel="stylesheet" type="text/css" href=""> -->
+	
 </head>
 <body>
 <div id="container">
